Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Renault Zoe Phase 2: Initial support
- Improved output of bms shell command for narrow windows.
  New commands:
    bms volt                            -- Output only voltage info if available
    bms temp                            -- Output only temperature info if available
- Hyundai Ioniq 5: Initial support
- Support for specifying units in scripts
  New commands:
    metrics units                       -- Display available unit identifiers
    metrics get                         -- Get at a particular metric value (with a specified unit)
  Extended commands:
    metrics set                         -- Support setting with a specified unit
  Extend functions
    OvmsMetrics.Value                   -- Optionally specify a unit (and make 'decode' work) and to get values with units.
    OvmsMetrics.GetValues               -- Optionally specify a unit to get values with units. 
    OvmsMetrics.AsFloat                 -- Optionally specify a unit
  New DukTape function
    OvmsMetrics.HasValue                -- Returns true if the metric has a valid value.
- Added power consumptions units:  kWhP100K,KPkWh,MPkWh
- Consolidate custom trip power consumption metrics to single value (kWhP100K)
  in Kia Niro and Kia Soul
- VFS: sorted directory listings & recursive directory listings
  New commands:
    vfs rls <path>                      -- List <path> and all subdirectory contents
- Vehicle: emit standard events on charge/generator connection type changes
  New events:
    vehicle.charge.type                 -- Vehicle charge connection type has changed (e.g. ccs/type2/…)
    vehicle.gen.type                    -- Vehicle generator connection type has changed
- CAN logging: add possibility to log events (name) and metrics (JSON object with name, value, unit)
  New configs: